organized data cleaning notebooks

--- a/initial_EDA.ipynb
+++ b/initial_EDA.ipynb
@@ -3328,7 +3328,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -3370,6 +3372,16 @@
    "source": [
     "# view missing values\n",
     "nashville_prices_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save cleaned airbnb dataframe\n",
+    "nashville_prices_df.to_csv(\"cleaned_data/zillow_data_clean.csv\")"
    ]
   },
   {
