updated time series MVP

--- a/Pre_Model_Cleaning.ipynb
+++ b/Pre_Model_Cleaning.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -506,7 +506,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "Name: neighbourhood_cleansed, Length: 233369, dtype: int32"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        " 33: 'Antioch'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "Townhouse                   15067\n",
        "Entire house                13731\n",
        "                            ...  \n",
-       "Castle                          4\n",
+       "Room in resort                  4\n",
        "Hut                             3\n",
        "Private room                    1\n",
        "Shared room in townhouse        1\n",
@@ -1009,7 +1009,7 @@
        "Name: property_type, Length: 90, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1057,7 @@
        "Name: property_type, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
        "Name: neighborhood, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1798,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2354,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2378,26 +2378,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Handle Missing Time Series Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Further Clean Zillow Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -2632,7 +2618,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2650,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2661,7 +2647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -2896,7 +2882,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2916,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2926,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -3161,7 +3147,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3172,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3271,7 +3257,7 @@
        "[302 rows x 1 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3290,12 +3276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_data_df = pd.merge(airbnb_monthly_mean, avg_home_value_df, how='inner',\n",
     "                        left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_data_df.to_csv(\"cleaned_data/model_data_clean.csv\")"
    ]
   },
   {
