--- a/initial_EDA.ipynb
+++ b/initial_EDA.ipynb
@@ -1443,6 +1443,266 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>scrape_id</th>\n",
+       "      <th>last_scraped</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_overview</th>\n",
+       "      <th>picture_url</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_url</th>\n",
+       "      <th>...</th>\n",
+       "      <th>review_scores_communication</th>\n",
+       "      <th>review_scores_location</th>\n",
+       "      <th>review_scores_value</th>\n",
+       "      <th>license</th>\n",
+       "      <th>instant_bookable</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>calculated_host_listings_count_entire_homes</th>\n",
+       "      <th>calculated_host_listings_count_private_rooms</th>\n",
+       "      <th>calculated_host_listings_count_shared_rooms</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20847</td>\n",
+       "      <td>https://www.airbnb.com/rooms/20847</td>\n",
+       "      <td>20200928025323</td>\n",
+       "      <td>2020-09-28</td>\n",
+       "      <td>East Nashville Retro Ranch!</td>\n",
+       "      <td>This listing is no longer available for short ...</td>\n",
+       "      <td>Many local favorites, including live music, th...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/36034958/8976...</td>\n",
+       "      <td>79021</td>\n",
+       "      <td>https://www.airbnb.com/users/show/79021</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25341</td>\n",
+       "      <td>https://www.airbnb.com/rooms/25341</td>\n",
+       "      <td>20200928025323</td>\n",
+       "      <td>2020-09-28</td>\n",
+       "      <td>East Nashville Retro Ranch BR #2</td>\n",
+       "      <td>This listing is no longer available for short ...</td>\n",
+       "      <td>Many local favorites, including live music, th...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/37248835/52aa...</td>\n",
+       "      <td>79021</td>\n",
+       "      <td>https://www.airbnb.com/users/show/79021</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25342</td>\n",
+       "      <td>https://www.airbnb.com/rooms/25342</td>\n",
+       "      <td>20200928025323</td>\n",
+       "      <td>2020-09-29</td>\n",
+       "      <td>East Nashville Retro Ranch BR #3</td>\n",
+       "      <td>This listing is no longer available for short ...</td>\n",
+       "      <td>Many local favorites, including live music, th...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/36655215/0907...</td>\n",
+       "      <td>79021</td>\n",
+       "      <td>https://www.airbnb.com/users/show/79021</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25613</td>\n",
+       "      <td>https://www.airbnb.com/rooms/25613</td>\n",
+       "      <td>20200928025323</td>\n",
+       "      <td>2020-09-29</td>\n",
+       "      <td>Room in Historic East Nashville Craftsman Home</td>\n",
+       "      <td>Serve up some sweet sounds on the piano and wi...</td>\n",
+       "      <td>This home is in a walkable neighborhood with i...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/60aa90fe-1b3f...</td>\n",
+       "      <td>95811</td>\n",
+       "      <td>https://www.airbnb.com/users/show/95811</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>t</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37306</td>\n",
+       "      <td>https://www.airbnb.com/rooms/37306</td>\n",
+       "      <td>20200928025323</td>\n",
+       "      <td>2020-09-28</td>\n",
+       "      <td>Private Room for Women and Couples in a Histor...</td>\n",
+       "      <td>Step onto the porch of a preserved period hous...</td>\n",
+       "      <td>The house is in Woodland-in-Waverly, the oldes...</td>\n",
+       "      <td>https://a0.muscache.com/pictures/3b23fa25-f800...</td>\n",
+       "      <td>161033</td>\n",
+       "      <td>https://www.airbnb.com/users/show/161033</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.96</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 74 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                         listing_url       scrape_id last_scraped  \\\n",
+       "0  20847  https://www.airbnb.com/rooms/20847  20200928025323   2020-09-28   \n",
+       "1  25341  https://www.airbnb.com/rooms/25341  20200928025323   2020-09-28   \n",
+       "2  25342  https://www.airbnb.com/rooms/25342  20200928025323   2020-09-29   \n",
+       "3  25613  https://www.airbnb.com/rooms/25613  20200928025323   2020-09-29   \n",
+       "4  37306  https://www.airbnb.com/rooms/37306  20200928025323   2020-09-28   \n",
+       "\n",
+       "                                                name  \\\n",
+       "0                        East Nashville Retro Ranch!   \n",
+       "1                   East Nashville Retro Ranch BR #2   \n",
+       "2                   East Nashville Retro Ranch BR #3   \n",
+       "3     Room in Historic East Nashville Craftsman Home   \n",
+       "4  Private Room for Women and Couples in a Histor...   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  This listing is no longer available for short ...   \n",
+       "1  This listing is no longer available for short ...   \n",
+       "2  This listing is no longer available for short ...   \n",
+       "3  Serve up some sweet sounds on the piano and wi...   \n",
+       "4  Step onto the porch of a preserved period hous...   \n",
+       "\n",
+       "                               neighborhood_overview  \\\n",
+       "0  Many local favorites, including live music, th...   \n",
+       "1  Many local favorites, including live music, th...   \n",
+       "2  Many local favorites, including live music, th...   \n",
+       "3  This home is in a walkable neighborhood with i...   \n",
+       "4  The house is in Woodland-in-Waverly, the oldes...   \n",
+       "\n",
+       "                                         picture_url  host_id  \\\n",
+       "0  https://a0.muscache.com/pictures/36034958/8976...    79021   \n",
+       "1  https://a0.muscache.com/pictures/37248835/52aa...    79021   \n",
+       "2  https://a0.muscache.com/pictures/36655215/0907...    79021   \n",
+       "3  https://a0.muscache.com/pictures/60aa90fe-1b3f...    95811   \n",
+       "4  https://a0.muscache.com/pictures/3b23fa25-f800...   161033   \n",
+       "\n",
+       "                                   host_url  ... review_scores_communication  \\\n",
+       "0   https://www.airbnb.com/users/show/79021  ...                        10.0   \n",
+       "1   https://www.airbnb.com/users/show/79021  ...                        10.0   \n",
+       "2   https://www.airbnb.com/users/show/79021  ...                        10.0   \n",
+       "3   https://www.airbnb.com/users/show/95811  ...                        10.0   \n",
+       "4  https://www.airbnb.com/users/show/161033  ...                        10.0   \n",
+       "\n",
+       "  review_scores_location review_scores_value license instant_bookable  \\\n",
+       "0                    9.0                 9.0     NaN                f   \n",
+       "1                    9.0                10.0     NaN                f   \n",
+       "2                    9.0                 9.0     NaN                f   \n",
+       "3                   10.0                10.0     NaN                t   \n",
+       "4                   10.0                10.0     NaN                f   \n",
+       "\n",
+       "  calculated_host_listings_count calculated_host_listings_count_entire_homes  \\\n",
+       "0                              3                                           0   \n",
+       "1                              3                                           0   \n",
+       "2                              3                                           0   \n",
+       "3                              1                                           0   \n",
+       "4                              1                                           0   \n",
+       "\n",
+       "  calculated_host_listings_count_private_rooms  \\\n",
+       "0                                            3   \n",
+       "1                                            3   \n",
+       "2                                            3   \n",
+       "3                                            1   \n",
+       "4                                            1   \n",
+       "\n",
+       "  calculated_host_listings_count_shared_rooms reviews_per_month  \n",
+       "0                                           0              1.07  \n",
+       "1                                           0              0.85  \n",
+       "2                                           0              0.04  \n",
+       "3                                           0              4.01  \n",
+       "4                                           0              0.96  \n",
+       "\n",
+       "[5 rows x 74 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "listings_df = pd.read_csv('raw_data/airbnb/listings/listings_9_20.csv.gz', compression='gzip')\n",
+    "listings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -7251,11 +7511,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# STOP HERE"
+   ]
   },
   {
    "cell_type": "code",
