--- a/initial_EDA.ipynb
+++ b/initial_EDA.ipynb
@@ -2886,8 +2886,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2990,7 +2992,7 @@
        "4           365.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2998,6 +3000,304 @@
    "source": [
     "calendar_df = pd.read_csv('raw_data/airbnb/calendar_2_21.csv.gz', compression='gzip')\n",
     "calendar_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2022-02-03    6144\n",
+       "2021-09-21    6144\n",
+       "2021-06-03    6144\n",
+       "2021-10-06    6144\n",
+       "2021-02-26    6144\n",
+       "              ... \n",
+       "2022-02-20     669\n",
+       "2022-02-22       1\n",
+       "2022-02-21       1\n",
+       "2022-02-23       1\n",
+       "2022-02-24       1\n",
+       "Name: date, Length: 371, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calendar_df['date'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendar_df['date'] = pd.to_datetime(calendar_df['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendar_df.set_index('date', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calendar_2021_df = calendar_df['2021']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>available</th>\n",
+       "      <th>price</th>\n",
+       "      <th>adjusted_price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>maximum_nights</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-02-20</th>\n",
+       "      <td>6422</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-21</th>\n",
+       "      <td>6422</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-22</th>\n",
+       "      <td>6422</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-23</th>\n",
+       "      <td>6422</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-24</th>\n",
+       "      <td>6422</td>\n",
+       "      <td>0</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>$40.00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-27</th>\n",
+       "      <td>48107192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-28</th>\n",
+       "      <td>48107192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-29</th>\n",
+       "      <td>48107192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-30</th>\n",
+       "      <td>48107192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-31</th>\n",
+       "      <td>48107192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>$32.00</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1935947 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            listing_id  available   price adjusted_price  minimum_nights  \\\n",
+       "date                                                                       \n",
+       "2021-02-20        6422          0  $40.00         $40.00            30.0   \n",
+       "2021-02-21        6422          0  $40.00         $40.00            30.0   \n",
+       "2021-02-22        6422          0  $40.00         $40.00            30.0   \n",
+       "2021-02-23        6422          0  $40.00         $40.00            30.0   \n",
+       "2021-02-24        6422          0  $40.00         $40.00            30.0   \n",
+       "...                ...        ...     ...            ...             ...   \n",
+       "2021-12-27    48107192          1  $32.00         $32.00            90.0   \n",
+       "2021-12-28    48107192          1  $32.00         $32.00            90.0   \n",
+       "2021-12-29    48107192          1  $32.00         $32.00            90.0   \n",
+       "2021-12-30    48107192          1  $32.00         $32.00            90.0   \n",
+       "2021-12-31    48107192          1  $32.00         $32.00            90.0   \n",
+       "\n",
+       "            maximum_nights  \n",
+       "date                        \n",
+       "2021-02-20           365.0  \n",
+       "2021-02-21           365.0  \n",
+       "2021-02-22           365.0  \n",
+       "2021-02-23           365.0  \n",
+       "2021-02-24           365.0  \n",
+       "...                    ...  \n",
+       "2021-12-27           365.0  \n",
+       "2021-12-28           365.0  \n",
+       "2021-12-29           365.0  \n",
+       "2021-12-30           365.0  \n",
+       "2021-12-31           365.0  \n",
+       "\n",
+       "[1935947 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calendar_2021_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_dict = {'f':0, 't':1}\n",
+    "calendar_df['available'] = calendar_df['available'].map(binary_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframe with 2021 available days of current listings\n",
+    "availability_21_df = calendar_2021_df.groupby(['listing_id']).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "365-51"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "availability_21_df.to_csv('cleaned_data/availability_data.csv')"
    ]
   },
   {
@@ -7144,7 +7444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# replace host listings count with 0 for now--we will try to calculate on our own later\n",
+    "# replace host listings count with 0 for now\n",
     "clean_airbnb_df['host_listings_count'] = clean_airbnb_df['host_listings_count'].fillna(0)"
    ]
   },
